namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: websites
  labels:
    author: lukas-schneider
  annotations:
    author: Lukas Schneider 
    description: Website namespace for all websites
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-other-namespaces
  namespace: websites
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-for-system-namespaces
  namespace: websites
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress
